dataset cleaning - final image

--- a/notebooks/preprocessin.ipynb
+++ b/notebooks/preprocessin.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,17 +87,22 @@
        "</div>"
       ],
       "text/plain": [
-       "        source  ...                                id\n",
-       "0  hate_speech  ...  4ecc4591238c4855bd54ea0d584f3054\n",
-       "1  hate_speech  ...  c682b650f3b24e6b94b36b89acd68e57\n",
-       "2  hate_speech  ...  9c92c46021824d89b96b0bba2b2b5a83\n",
-       "3  hate_speech  ...  c4ab2ea47a3e4e3bbbf530d273cc244f\n",
-       "4  hate_speech  ...  23e3092360e54bca85a5b0336ed8cf8e\n",
+       "        source                                               text  label  \\\n",
+       "0  hate_speech  !!! RT @mayasolovely: As a woman you shouldn't...      2   \n",
+       "1  hate_speech  !!!!! RT @mleew17: boy dats cold...tyga dwn ba...      1   \n",
+       "2  hate_speech  !!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...      1   \n",
+       "3  hate_speech  !!!!!!!!! RT @C_G_Anderson: @viva_based she lo...      1   \n",
+       "4  hate_speech  !!!!!!!!!!!!! RT @ShenikaRoberts: The shit you...      1   \n",
        "\n",
-       "[5 rows x 4 columns]"
+       "                                 id  \n",
+       "0  4ecc4591238c4855bd54ea0d584f3054  \n",
+       "1  c682b650f3b24e6b94b36b89acd68e57  \n",
+       "2  9c92c46021824d89b96b0bba2b2b5a83  \n",
+       "3  c4ab2ea47a3e4e3bbbf530d273cc244f  \n",
+       "4  23e3092360e54bca85a5b0336ed8cf8e  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +117,7 @@
     "\n",
     "project_root = os.path.dirname(os.getcwd())\n",
     "data_dir = os.path.join(project_root, 'datasets')\n",
-    "data_file = os.path.join(data_dir, 'raw/merged_dataset.csv')\n",
+    "data_file = os.path.join(data_dir, 'raw/dataset_full.csv')\n",
     "\n",
     "df = pd.read_csv(data_file)\n",
     "df.head()"
@@ -134,27 +139,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(184354, 4)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "label\n",
-       "0    30000\n",
+       "0    80500\n",
        "1    24897\n",
        "2    14681\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Rebalance the data by selecting 30000 random samples from class 0\n",
-    "df_balanced = pd.concat([df[df.label == 0].sample(n=30000), df[df.label != 0]])\n",
+    "df_balanced = pd.concat([df[df.label == 0].sample(n=(120000-39500)), df[df.label != 0]])\n",
     "df_balanced.label.value_counts()"
    ]
   },
