Renouncing multiclass - retrained models - 91% recall"

--- a/notebooks/predict.ipynb
+++ b/notebooks/predict.ipynb
@@ -164,23 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add the parent directory to sys.path\n",
-    "import sys\n",
-    "import os\n",
     "import re\n",
     "from utils.artifacts import REGEX_REMOVE, REGEX_REPLACE\n",
+    "import numpy as np\n",
     "from textblob import TextBlob\n",
     "import signal\n",
+    "import pandas as pd\n",
     "import nltk\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords, wordnet, words, webtext, gutenberg, brown\n",
-    "from utils.cleaning import process_batch\n",
     "from utils.artifacts import slang_dict\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "#from tensorflow.keras.utils import pad_sequences\n",
     "\n",
     "# NLTK resources\n",
     "nltk.download('stopwords', quiet=True)\n",
@@ -193,6 +194,7 @@
     "stop_words = stopwords.words('english')\n",
     "combined_corpus = set(words.words()) | set(wordnet.words()) | set(webtext.words()) | set(gutenberg.words()) | set(brown.words())\n",
     "combined_corpus = {word.lower() for word in combined_corpus}\n",
+    "\n",
     "\n",
     "def clean_data(batch, stop_words = stop_words, slang_dict=slang_dict):\n",
     "        def clean_text(text: str) -> str:\n",
@@ -220,20 +222,20 @@
     "        def correct_text(text: str, stop_words, slang_dict: dict) -> str:\n",
     "            tokens = text.split()\n",
     "            tokens = [slang_dict.get(word, word) for word in tokens]\n",
-    "            #tokens = [word for word in tokens if word not in stop_words]\n",
-    "            tokens = [word for word in tokens if len(word) < 15]\n",
+    "            tokens = [word for word in tokens if word not in stop_words]\n",
+    "            #tokens = [word for word in tokens if len(word) < 15]\n",
     "            text = ' '.join(tokens)\n",
     "            corrected_text = str(TextBlob(text).correct())\n",
     "            return corrected_text\n",
     "        \n",
     "        \n",
-    "        def lemma_text(tokens: list) -> list:\n",
-    "            lemmatizer = WordNetLemmatizer()\n",
-    "            \n",
-    "            ls = [lemmatizer.lemmatize(token, 'v') for token in tokens]\n",
-    "            ls = [lemmatizer.lemmatize(token, 'n') for token in ls]\n",
-    "            ls = [lemmatizer.lemmatize(token, 'a') for token in ls]\n",
-    "            return ls\n",
+    "        #def lemma_text(tokens: list) -> list:\n",
+    "        #    lemmatizer = WordNetLemmatizer()\n",
+    "        #    \n",
+    "        #    ls = [lemmatizer.lemmatize(token, 'v') for token in tokens]\n",
+    "        #    ls = [lemmatizer.lemmatize(token, 'n') for token in ls]\n",
+    "        #    ls = [lemmatizer.lemmatize(token, 'a') for token in ls]\n",
+    "        #    return ls\n",
     "        \n",
     "        def replace_unknown_tokens(tokens: list) -> list:\n",
     "            return [token if token in combined_corpus else '<UNK>' for token in tokens]\n",
@@ -244,15 +246,15 @@
     "            corrected_text = correct_text(text, stop_words, slang_dict)\n",
     "            return corrected_text\n",
     "        \n",
-    "        def tokenize(text: str) -> list:\n",
-    "            tokens = word_tokenize(text, preserve_line=True)\n",
-    "            tokens = lemma_text(tokens)\n",
-    "            tokens = replace_unknown_tokens(tokens)\n",
-    "            return tokens\n",
+    "        #def tokenize(text: str) -> list:\n",
+    "        #    tokens = word_tokenize(text, preserve_line=True)\n",
+    "        #    tokens = lemma_text(tokens)\n",
+    "        #    tokens = replace_unknown_tokens(tokens)\n",
+    "        #    return tokens\n",
     "        \n",
     "        # Process each text in the batch\n",
     "        batch['corrected_text'] = batch['text'].apply(combined_cleaning)\n",
-    "        batch['tokens'] = batch['corrected_text'].apply(tokenize)\n",
+    "        #batch['tokens'] = batch['corrected_text'].apply(tokenize)\n",
     "        return batch"
    ]
   },
@@ -381,6 +383,112 @@
    ],
    "source": [
     "model.predict(data_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-29 09:08:39.468465: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1\n",
+      "2024-11-29 09:08:39.468516: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 8.00 GB\n",
+      "2024-11-29 09:08:39.468534: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 2.67 GB\n",
+      "2024-11-29 09:08:39.468751: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2024-11-29 09:08:39.469137: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n",
+      "2024-11-29 09:08:41.478285: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:117] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import partial\n",
+    "import tensorflow as tf\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
+    "project_root = os.path.dirname(os.getcwd())\n",
+    "from utils.custom_metrics import (\n",
+    "    WeightedCategoricalCrossEntropy, \n",
+    "    PrecisionMulticlass, \n",
+    "    RecallMulticlass,\n",
+    "    F1ScoreMulticlass,\n",
+    "    weights\n",
+    ")\n",
+    "\n",
+    "\n",
+    "model = tf.keras.models.load_model(\n",
+    "    os.path.join(project_root, \"models\", \"bi_gru\"),\n",
+    "    custom_objects={'PrecisionMulticlass': PrecisionMulticlass,\n",
+    "                    'RecallMulticlass': RecallMulticlass,\n",
+    "                    'F1ScoreMulticlass': F1ScoreMulticlass,\n",
+    "                    'WeightedCategoricalCrossEntropy': partial(WeightedCategoricalCrossEntropy, weights=weights)}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_predict_dataset(data: pd.DataFrame, batch_size:int = 512):\n",
+    "    # Prepare dataset\n",
+    "    X = data[\"text\"]\n",
+    "\n",
+    "    # Create tf.data.Dataset\n",
+    "    dataset = tf.data.Dataset.from_tensor_slices((X))\n",
+    "\n",
+    "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_input = \"I a.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame({\"text\": [user_input]})\n",
+    "data = clean_data(data)\n",
+    "data = build_predict_dataset(data).batch(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 55ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0310078, 0.9689922]], dtype=float32)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(data)"
    ]
   }
  ],
