--- a/notebooks/bert.ipynb
+++ b/notebooks/bert.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Import"
+    "# Raw Data & Import"
    ]
   },
   {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,9 @@
     "from utils.custom_metrics import RecallMulticlass, PrecisionMulticlass, F1ScoreMulticlass, WeightedCategoricalCrossEntropy\n",
     "\n",
     "# metrics\n",
-    "metrics = [RecallMulticlass(name=\"recall\", n_class=2), PrecisionMulticlass(name=\"precision\", n_class=2), F1ScoreMulticlass(name=\"f1\", n_class=2)]\n",
+    "metrics = [RecallMulticlass(name=\"recall\", n_class=2), \n",
+    "           PrecisionMulticlass(name=\"precision\", n_class=2), \n",
+    "           F1ScoreMulticlass(name=\"f1\", n_class=2)]\n",
     "\n",
     "# weights\n",
     "weights = data[\"label\"].value_counts(normalize=True).sort_index().values\n",
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +452,6 @@
    ],
    "source": [
     "# Investigate class distribution in y_train and y_test\n",
-    "\n",
     "print(f\"y_train class distribution: {tf.divide(tf.reduce_sum(labels, axis=0), tf.reduce_sum(labels))}\")\n",
     "print(f\"y_test class distribution: {tf.divide(tf.reduce_sum(val_labels, axis=0), tf.reduce_sum(val_labels))}\")"
    ]
@@ -709,71 +710,6 @@
    ],
    "source": [
     "model_history = model.fit(training_dataset, epochs=100, callbacks=callbacks, validation_data=validation_dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the PyTorch model were not used when initializing the TF 2.0 model TFBertModel: ['cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight']\n",
-      "- This IS expected if you are initializing TFBertModel from a PyTorch model trained on another task or with another architecture (e.g. initializing a TFBertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing TFBertModel from a PyTorch model that you expect to be exactly identical (e.g. initializing a TFBertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "All the weights of TFBertModel were initialized from the PyTorch model.\n",
-      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFBertModel for predictions without further training.\n",
-      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.checkpoint.checkpoint.CheckpointLoadStatus at 0x38902b6d0>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Try loading the model by importing weights into empty model\n",
-    "# Create a new model\n",
-    "# Load the pre-trained BERT model\n",
-    "bert_model = TFBertModel.from_pretrained('bert-base-uncased')\n",
-    "\n",
-    "# Freeze the BERT model layers\n",
-    "for layer in bert_model.layers:  # Freeze all layers\n",
-    "    layer.trainable = False\n",
-    "\n",
-    "# Define the input layers\n",
-    "input_ids = tf.keras.layers.Input(shape=(128,), dtype=tf.int32, name=\"input_ids\")\n",
-    "attention_mask = tf.keras.layers.Input(shape=(128,), dtype=tf.int32, name=\"attention_mask\")\n",
-    "\n",
-    "# Get the output from the BERT model\n",
-    "bert_outputs = bert_model(input_ids, attention_mask=attention_mask)\n",
-    "\n",
-    "# Use the pooled output for classification\n",
-    "pooled_output = bert_outputs.pooler_output\n",
-    "\n",
-    "# Add custom layers\n",
-    "x = tf.keras.layers.Dense(128, activation='relu')(pooled_output)\n",
-    "x = tf.keras.layers.Dropout(0.2)(x)\n",
-    "x = tf.keras.layers.Dense(64, activation='relu')(x)\n",
-    "output = tf.keras.layers.Dense(3, activation='softmax')(x)\n",
-    "\n",
-    "# Create the model\n",
-    "test_model = tf.keras.Model(inputs=[input_ids, attention_mask], outputs=output)\n",
-    "\n",
-    "# Compile the model\n",
-    "test_model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=2e-5),\n",
-    "              loss=loss,\n",
-    "              metrics=metrics)\n",
-    "# Load the weights\n",
-    "test_model.load_weights(os.path.join(project_root, \"models\", \"bert_model_test\"))"
    ]
   }
  ],
